--- a/src/pix.html
+++ b/src/pix.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Görsel arama uygulaması</title>
-    
   </head>
   <body>
     <form class="search-form" id="search-form">
-    <input
+      <input
         type="text"
         name="searchQuery"
         autocomplete="off"
-        placeholder="Search images..." 
-    />
-    <button type="submit">Search</button>
-</form>
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
 
-    <div class="loader" role="status" aria-label="İçerik yükleniyor. Lütfen bekleyiniz."></div>
+    <div
+      id="loader"
+      class="loader"
+      role="status"
+      aria-label="İçerik yükleniyor. Lütfen bekleyiniz."
+    >
+      <p>Loading images, please wait...</p>
+    </div>
 
     <div class="gallery"></div>
 
     <script type="module" src="./js/pix.js"></script>
-   
   </body>
 </html>
